Commited to improve pace across all domain for Continuum-protocol

--- a/1_Daily_logs/Day004.md
+++ b/1_Daily_logs/Day004.md
@@ -1,7 +1,37 @@
 
-# Day004 
--**Date:15/11/2025 **
+#  Date:15/11/2025 Day004
 ## Current Book
 **Electronics for Beginners: A Practical Introduction** by Jonathan Barelet
-**Chapter:**2 half
+**Chapter:**1 and 2 half
 ## Topics Learned Today
+
+### Core Concepts
+-**ELectrostatics discarge (Esd)**
+-Risks of static electricity to electronic components
+-Proper handling prevention methods
+
+-Units and Measurements**
+-SI units system in eletroncis
+-Water pipe analogy for electrical concepts
+-Used Chatgpt to better understand analogies
+
+### Technical Topics
+-**Frequency**
+-Basic concepts
+-Frequency loops or repettion is the tools not final product
+-**understanding**
+-A 1Hz clock ticks once per second
+-An LED binking at 5 Hz blinks 5 times per second
+- A processor running at 1 Ghz has fundamental clock that cycles 1 billion times per second
+- 5 Hz = 5 blinks per second
+- 1 billion Ghz = 1 billion blinks per second
+- so i understand that it doesn't just do one kind of activities per-second but differnt kind.
+
+  ## Book change update
+  **Switched from:** *Makes:Electronics* by Charles Platt
+  **Reason**
+  -Previous book pace was too slow
+  -Needed more direcr with deep and fast-paced content
+  -Better alignment with current learning style
+
+  **Commited to improving pace and understadning over time for project Contiuum-protocol 
